--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 	<title>Baseline</title>
 
-	<link rel='icon' type='image/png' href='favicon.png'>
+	<link rel='icon' type='image/png' href='favicon.ico'>
 	<link rel='stylesheet' href='bundle.css'>
 
 	<script defer src='bundle.js'></script>
