--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width'>
 
-	<title>Baseline</title>
+	<title>Transit challenge solver</title>
 
-	<link rel='icon' type='image/png' href='favicon.ico'>
+	<link rel='icon' type='image/ico' href='favicon.ico'>
 	<link rel='stylesheet' href='bundle.css'>
 
 	<script defer src='bundle.js'></script>
